# SeaIceMassBudgetMIP

./: .gitattributes  .gitignore  README.md  pyproject.toml
contributions/: template_config.toml
contributions/EC-Earth3-ESM1/: run_simba_EC-Earth3-ESM-1.sh
contributions/EC-Earth3-ESM1/configs/: EC-Earth3-ESM1_esm-hist_config.toml  EC-Earth3-ESM1_esm-piControl_config.toml  EC-Earth3-ESM1_esm-up2p0-gwl-dn_config.toml  EC-Earth3-ESM1_esm-up2p0-gwl_config.toml  EC-Earth3-ESM1_esm-up2p0_config.toml
contributions/UKESM1-2-LL/: run_simba_UKESM1-2-LL.sh
contributions/UKESM1-2-LL/configs/: UKESM1-2-LL_esm-hist_config.toml  UKESM1-2-LL_esm-piControl_config.toml  UKESM1-2-LL_esm-up2p0-gwl-dn_config.toml  UKESM1-2-LL_esm-up2p0-gwl_config.toml  UKESM1-2-LL_esm-up2p0_config.toml
simba/: __init__.py  cli.py  compute.py  pipeline.py  utils.py
