[project]
name = "SeaIceMassBudgetMIP"
description = "Open-source Python tool to calculate sea ice mass budget analysis from sea-ice components of Earth System Models."
keywords = ["sea-ice", "cmip", "modelling", "analysis", "tipmip", "optimesm"]
classifiers = [
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
version = "0.1.0"
authors = [{email = "oliver.tooth@noc.ac.uk"},{name = "Ollie Tooth"}]
maintainers = [{name = "Ollie Tooth", email = "oliver.tooth@noc.ac.uk"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "typer",
  "pydantic",
  "dask>=2024.10.0",
  "netcdf4",
  "numpy>=1.26.4",
  "xarray>=2024.10.0",
  ]
[project.urls]
Repository = "https://github.com/oj-tooth/SeaIceMassBudgetMIP"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0.3", "setuptools-scm>=8"]

[tool.setuptools]
packages = ["simba"]

[project.scripts]
simba = "simba.cli:app"
